terraform-1/security_group.tf
resource "aws_security_group" "allow_ssh_http_jenkins" {
  name        = "Allow_ssh_http_jenkins"
  description = "Allow SSH, HTTP, and Jenkins traffic"
  vpc_id      = aws_vpc.terraform.id

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Jenkins from VPC"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
  // Tags should be inside the main resource block, not directly under egress
  tags = {
    Name = "allow_ssh_http_jenkins"
  }
}
